<resources>
    <string name="app_name">FitnessTutorial3</string>
    <string name="baitap">Bài tập</string>
    <string name="chuongtrinh">Chương trình</string>
    <string name="bangtracalo">Bảng tra calo</string>
    <string name="cobap">Cơ bắp</string>
    <string name="timmach">Tim mạch</string>
    <string name="yogo">Yoga</string>
    <string name="baitaptainha">Tại nhà</string>
    <string name="checking_account">Checking ......</string>

    <string name="title_activity_chuong_trinh_bai_tap_chi_tiet">ChuongTrinhBaiTapChiTietActivity
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
