<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlHighlight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.43"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:weightSum="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:layout_margin="5dp"
                android:id="@+id/baitap"
                style="@style/btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baitap" />

            <Button
                android:layout_margin="5dp"
                android:id="@+id/chuongtrinh"
                style="@style/btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chuongtrinh" />

            <Button
                android:id="@+id/bangtracalo"
                style="@style/btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/bangtracalo" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:background="@color/bottonBackgroud"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.3"
            app:srcCompat="@drawable/fllow" />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="0.4"
            app:srcCompat="@drawable/info" />

        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.3"
            app:srcCompat="@drawable/tool" />
    </LinearLayout>

</LinearLayout>